tests/sources/invalid/enums/enum_construct_errors.fire
// Malformed enum variant constructions.
enum Color {
    Red,
    Green
}

// Missing variant name after '.'
Color a = Color.;

// Unknown variant
Color b = Color.Purple;
